# a3d-data

./: .gitattributes  .gitignore  clusters.ipynb  pyproject.toml  seathru.ipynb
a3d_data/: __main__.py  run.py
clusters/2D/: aniso.npz  blobs.npz  no_structure.npz  noisy_circles.npz  noisy_moons.npz  varied.npz
seathru/D1/D1/depth/: depthT_S02951.npz  depthT_S02952.npz  depthT_S02953.npz  depthT_S02954.npz  depthT_S02955.npz  depthT_S02956.npz  depthT_S02957.npz  depthT_S02958.npz  depthT_S02959.npz  depthT_S02960.npz  depthT_S02961.npz  depthT_S02962.npz  depthT_S02963.npz  depthT_S02964.npz  depthT_S02965.npz  depthT_S02966.npz  depthT_S02967.npz  depthT_S02968.npz  depthT_S02969.npz  depthT_S02970.npz  depthT_S02971.npz  depthT_S02972.npz  depthT_S02973.npz  depthT_S02974.npz  depthT_S02975.npz  depthT_S02976.npz  depthT_S02977.npz  depthT_S02978.npz  depthT_S02979.npz  depthT_S02980.npz  depthT_S02981.npz  depthT_S02982.npz  depthT_S02983.npz  depthT_S02984.npz  depthT_S02985.npz  depthT_S02986.npz  depthT_S02987.npz  depthT_S02988.npz  depthT_S02989.npz  depthT_S02990.npz  (+582 more)
seathru/D2/D2/depth/: depthT_S03585.npz  depthT_S03586.npz  depthT_S03587.npz  depthT_S03588.npz  depthT_S03589.npz  depthT_S03590.npz  depthT_S03591.npz  depthT_S03592.npz  depthT_S03593.npz  depthT_S03594.npz  depthT_S03595.npz  depthT_S03596.npz  depthT_S03597.npz  depthT_S03598.npz  depthT_S03599.npz  depthT_S03600.npz  depthT_S03601.npz  depthT_S03602.npz  depthT_S03603.npz  depthT_S03604.npz  depthT_S03605.npz  depthT_S03606.npz  depthT_S03607.npz  depthT_S03608.npz  depthT_S03609.npz  (+294 more)
(+264 files in other folders)
